docs: add query-dsl examples to README